<resources>
    <string name="app_name">惠付券</string>
    <string name="app_short_version">APP_VERSION_SHORT</string>
    <string name="app_full_version">APP_VERSION_FULL</string>
    <string name="umeng_key">5a5eabc1b27b0a6d73000183</string>
    <string name="umeng_channel">Huifuquan</string>
    <string name="baidu_map_key">eeayn6pI7C6f10NRSkON5eNAIXtElegj</string>
    <string name="func_desc_reset">重置密码</string>
    <string name="func_desc_register">用户注册</string>
    <string name="func_desc_systerms">惠付券用户协议</string>
    <string name="onlien_pay_procotol">在线支付协议</string>
    <string name="func_desc_about">关于惠付券</string>
    <string name="func_desc_scan">扫一扫</string>
    <string name="func_desc_banklist">我的银行卡</string>
    <string name="main">首页</string>
    <string name="card_home">圈广场</string>
    <string name="coupon_home">优惠券</string>
    <string name="my_home">我的</string>
    <string name="order_manager">我的订单</string>
    <string name="order_recommmend">推荐好友得壕礼</string>
    <string name="limit_buy">限时购</string>
    <string name="icbc_preferential">建银特惠</string>
    <string name="theme_home">惠付券主题</string>
    <string name="experience_home">体验馆</string>
    <string name="other_home">其他</string>
    <string name="coffee_home">丽人</string>
    <string name="fit_home">健身</string>
    <string name="entertain_home">娱乐</string>
    <string name="food_home">美食</string>
    <string name="home_money">￥</string>
    <string name="home_discount">折</string>
    <string name="home_gps">定位中</string>
    <string name="home_selcitys">请选择</string>
    <string name="home_gpscitys">你定位的城市现在还没开放，请在左上角选择城市！</string>
    <string name="home_noselcity">请在左上角选择城市！</string>
    <string name="tv_csmuse">消费即可用</string>
    <string name="recommend_shop">推荐商家</string>
    <string name="more_shop">更多</string>
    <string name="search_area">正在切换地名,数据还在加载中,请稍等</string>
    <string name="no_city_open">对不起，你选择的城市暂无数据，请等待</string>
    <string name="hint_input_phonenum">请输入手机号</string>
    <string name="identify_code">验证码</string>
    <string name="identify_phone">手机号</string>
    <string name="hint_input_indentify_code">请输入短信验证码</string>
    <string name="send_identify_code">发送验证码</string>
    <string name="pwd_reset">"密码    "</string>
    <string name="hint_input_pwd">请输入密码</string>
    <string name="confirm">确认</string>
    <string name="register">确认</string>
    <string name="reset">重置</string>
    <string name="scan_text">将二维码放入框内，即可自动扫描</string>
    <string name="tv_username">账号</string>
    <string name="tv_password">密码</string>
    <string name="edt_hint_input_username">手机号</string>
    <string name="edt_hint_input_password">密码</string>
    <string name="forget_pwd">忘记密码？</string>
    <string name="btn_login">确定</string>
    <string name="btn_register">注册</string>
    <string name="describtion_of_shopcard">商家会员卡图片</string>
    <string name="remember_pwd">记住密码</string>
    <string name="login_title">账号注册</string>
    <string name="login_custinternet_error">请连接网络</string>
    <string name="register_title">商户注册</string>
    <string name="tv_business_licence">邀请码</string>
    <string name="edt_hint_input_business_licence">请输入邀请码(可不写)</string>
    <string name="chb_obey">遵守</string>
    <string name="tv_baomi_terms">《惠付券用户协议》</string>
    <string name="tv_register_icbc">中国建设银行股份有限公司浙江省分行</string>
    <string name="tv_register_xinli">艾体威尔电子技术（北京）有限公司</string>
    <string name="tv_register_huiquan">联合打造一流互惠互利圈子平台</string>
    <string name="focus_merchant">关注</string>
    <string name="common_merchant">足迹</string>
    <string name="nearly">附近</string>
    <string name="act">活动</string>
    <string name="focus_logo">LOGO</string>
    <string name="focus_cardname">Card</string>
    <string name="focus_number">No.</string>
    <string name="focus_rank">等级：</string>
    <string name="focus_privilege">特权：</string>
    <string name="focus_integral">积分：</string>
    <string name="focus_validityl">有效期：</string>
    <string name="focus_telphone">联系电话</string>
    <string name="focus_address">地址</string>
    <string name="focus_receive">领取会员卡</string>
    <string name="focus">关注</string>
    <string name="focus_cancele">取消关注</string>
    <string name="focus_imm">立即关注</string>
    <string name="cancele_success">取消成功</string>
    <string name="focus_success">关注成功</string>
    <string name="tv_goalcard">金卡</string>
    <string name="tv_silvercard">银卡</string>
    <string name="tv_platinumcard">白金卡</string>
    <string name="full">满</string>
    <string name="will_enjoy">积分将可享受本店折扣</string>
    <string name="all_house">全场</string>
    <string name="privilege">折优惠</string>
    <string name="search_shop">搜索商户、地名</string>
    <string name="search_card_shop">搜索会员店铺</string>
    <string name="search_coupon">搜索</string>
    <string name="today_redbag_end">今天的红包已经被领完了！！</string>
    <string name="redbag_end">红包已经被领完了哦！！！</string>
    <string name="redbag_actend">抢红包活动已结束</string>
    <string name="redbag_time">抢红包的时间还未到,请耐心等待一会</string>
    <string name="redbag_error">红包没抢到哦</string>
    <string name="redbag_succ">领取成功,赶快去使用吧</string>
    <string name="redbag_nograb">不着急，还有一会</string>
    <string name="tv_red_packet">抢红包</string>
    <string name="btn_red_packet">红包图片宣传区</string>
    <string name="tv_red_packet_detail">抢红包区说明区</string>
    <string name="tv_red_packet_date">（秒杀说明时间点）</string>
    <string name="tv_red_packet_share_dtl">红包分享说明区</string>
    <string name="tv_red_packet_greade_dtl">红包规则说明区</string>
    <string name="huiquan_bounsp">支付的惠付券金额不够</string>
    <string name="shop_bounsp">支付的商家金额不够</string>
    <string name="coupon_limit_num">优惠券使用数量超过商家限额数量</string>
    <string name="pay_money_limit">实际支付金额小于最小消费限额</string>
    <string name="coupon_sum_less">您使用的优惠太多，请修改优惠金额（比如红包，优惠券）</string>
    <string name="tv_coupon_effect">有效的</string>
    <string name="tv_coupon_history">历史的</string>
    <string name="tv_coupon_logo">LOGO</string>
    <string name="tv_coupon_price">面值</string>
    <string name="tv_coupon_effet">有效期：</string>
    <string name="tv_coupon_user_grade">使用规则：</string>
    <string name="tv_coupon_tel">使用说明：</string>
    <string name="tv_coupon_no">No：</string>
    <string name="tv_coupon_range">使用范围：</string>
    <string name="tv_coupon_nbr">券号：</string>
    <string name="tv_batch_nbr">批  次  号：</string>
    <string name="tv_coupon_user_time">使用时间：</string>
    <string name="tv_coupon_use_file">优惠券说明：</string>
    <string name="tv_coupon_addr">地&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;址：</string>
    <string name="btn_coupon_all">所有人可见</string>
    <string name="coupon_deduct">抵扣券</string>
    <string name="full_send">满就送</string>
    <string name="coupon_discount">折扣券</string>
    <string name="n_buy">N元购</string>
    <string name="exchange_voucher">兑换券</string>
    <string name="voucher">代金券</string>
    <string name="full_cut">满就减</string>
    <string name="limits_buy">限时购</string>
    <string name="real_coupon">实物劵</string>
    <string name="experience">体验券</string>
    <string name="order_n_buy">N元购:</string>
    <string name="order_real_coupon">实物券:</string>
    <string name="order_coupon_deduct">抵扣券:</string>
    <string name="order_coupon_discount">折扣券:</string>
    <string name="order_experience">体验券:</string>
    <string name="order_success">已完成</string>
    <string name="order_fail">未完成</string>
    <string name="tv_carddetail_card">会员卡详情</string>
    <string name="tv_carddetail_name">姓名：</string>
    <string name="tv_carddetail_birthday">生日：</string>
    <string name="tv_been_concerned">您已关注过该商家了!!</string>
    <string name="tv_been_apply">您已申请过了</string>
    <string name="tv_over_count">该种会员卡数量达上限</string>
    <string name="tv_not_apply_criteria">不符合申请的标准</string>
    <string name="tv_no_usercode">请输入用户编码</string>
    <string name="tv_no_cardcode">请输入会员卡号</string>
    <string name="tv_apply_success">申请会员卡成功</string>
    <string name="tv_apply_fail">申请会员卡失败了</string>
    <string name="tv_activity_detail">活动详情</string>
    <string name="tv_enroll">报名</string>
    <string name="tv_icbc_activity">建银特惠</string>
    <string name="tv_theme_activity">惠付券主题</string>
    <string name="tv_actname_activity">活动详情</string>
    <string name="tv_shopdetail_content">店铺详情：</string>
    <string name="tv_shopdetail_tel">联 系 电 话：</string>
    <string name="tv_shopdetail_time">营 业 时 间：</string>
    <string name="tv_shopdetail_address">本商家位于：</string>
    <string name="tv_shopdetail_coupon">优惠券</string>
    <string name="tv_shopdetail_card">会员卡</string>
    <string name="tv_shopdetail_introduction">店铺简介</string>
    <string name="shop_name">商家名称</string>
    <string name="huiquan_act">惠付券活动</string>
    <string name="pay_shop_act">商家活动</string>
    <string name="message_shop">给商家留言</string>
    <string name="loading_data">正在加载数据</string>
    <string name="myhome_id">惠付券ID：</string>
    <string name="myhome_grade">等级：</string>
    <string name="myhome_city">所有省市：</string>
    <string name="myhome_bank">我的银行卡</string>
    <string name="myhome_pay_twocode">我的付款码</string>
    <string name="myhome_manmager_pay">支付管理</string>
    <string name="under_300_no_inden">300元以下免验证码支付</string>
    <string name="myhome_add">开通建行卡快捷支付</string>
    <string name="myhome_message">我的消息</string>
    <string name="myhome_message_communicate">商家沟通</string>
    <string name="myhome_message_broadcast">商家广播</string>
    <string name="myhome_advice">您的建议是我们成功的基础</string>
    <string name="myhome_set">设置</string>
    <string name="myhome_about">关于</string>
    <string name="myhome_abouthui">关于惠付券</string>
    <string name="myhome_tel">tel:400-04-95588</string>
    <string name="tel">tel:</string>
    <string name="tel_null">电话号码为空</string>
    <string name="tel_error">电话号码不正确</string>
    <string name="myhome_redbag">我的红包</string>
    <string name="myhome_redact">我的活动</string>
    <string name="my_huibi">惠币</string>
    <string name="myhome_bank_four">尾号 </string>
    <string name="myhome_addbank_name">姓名</string>
    <string name="myhome_addbank_type">证件类型</string>
    <string name="myhome_addbank_card">证件号码</string>
    <string name="myhome_addbank_bankcard">卡号</string>
    <string name="myhome_addbank_phone">手机号</string>
    <string name="myhome_addbank_next">下一步</string>
    <string name="myhome_addvalitade_content">您正在开通建银快捷支付并做绑定验证，验证码已由95588发送至您的预留手机：186****5265，请按提示进行操作。</string>
    <string name="myhome_addbank_again">获取验证码</string>
    <string name="myhome_addbank_ok">同意开通建银快捷支付并绑定银行卡</string>
    <string name="myhome_addbank_prompt">您已经成功绑定卡位末四位8888的建行信用卡</string>
    <string name="myhome_addbank_byname">本银行卡别名</string>
    <string name="myhome_addbank_finish">完成</string>
    <string name="myhome_addbank_content">*请在"卡号"位置输入全信用卡卡号进行查询操作</string>
    <string name="myhome_bankdetail_four">银行卡后四位</string>
    <string name="myhome_bankdetail_integration">积分</string>
    <string name="myhome_bankdetail_imit">额度</string>
    <string name="myhome_bankdetail_repayment">本期还款金额</string>
    <string name="myhome_bankdetail_minimumrepaymentr">最低还款额</string>
    <string name="myhome_bankdetail_date">还款日期</string>
    <string name="myhome_timelimitl_search">搜索店铺</string>
    <string name="search_shopcoupon">搜索店铺优惠</string>
    <string name="myhome_timelimitl_memlogo">xxxx</string>
    <string name="myhome_timelimitl_distance">100</string>
    <string name="myhome_timelimitl_mi">米</string>
    <string name="myhome_timelimitl_money">0</string>
    <string name="myhome_timelimitl_grab">抢</string>
    <string name="myhome_timelimitl_title">限时购</string>
    <string name="scan_succ_first">恭喜你扫码成功</string>
    <string name="scan_succ_second">返回加菜</string>
    <string name="scan_succ_third">确认下单</string>
    <string name="scan_fail_first">扫码失败，商户信息不匹配</string>
    <string name="scan_fail_other">抱歉，扫码失败</string>
    <string name="scan_fail_second">请仔细核实您所在的店铺和您正在点餐的</string>
    <string name="scan_fail_five">商户是否一致</string>
    <string name="scan_fail_third">返回</string>
    <string name="scan_fail_four">重新扫描</string>
</resources>