<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/LyCommSet" >

    <include layout="@layout/common_title_commit" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_height"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tv_focus"
            style="@style/tvCircleTitle"
            android:background="@drawable/bottom_red_border"
            android:enabled="true"
            android:text="@string/focus_merchant"
            android:textColor="@color/red" />

        <View style="@style/VLineVCircle" />

        <TextView
            android:id="@+id/tv_common"
            style="@style/tvCircleTitle"
            android:text="@string/common_merchant"
            android:textColor="@color/gray" />

        <View style="@style/VLineVCircle" />

        <TextView
            android:id="@+id/tv_nearby"
            style="@style/tvCircleTitle"
            android:text="@string/nearly"
            android:textColor="@color/gray" />

        <View
            style="@style/VLineVCircle"
            android:visibility="visible" />

        <TextView
            android:id="@+id/tv_act"
            style="@style/tvCircleTitle"
            android:text="@string/act"
            android:textColor="@color/gray"
            android:visibility="visible" />
    </LinearLayout>
    <TextView style="@style/VLine"/>

    <LinearLayout
        android:id="@+id/linear_cardlist_content"
        style="@style/LyWHFirst"
        android:layout_marginTop="10dp"
        android:orientation="horizontal" >
    </LinearLayout>

</LinearLayout>