<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/LyOutSet" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/scan_meal"
        android:gravity="center"
        android:orientation="vertical" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/layout_height"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:text="@string/scan_succ_first"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btn_scan_succ_back"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/navigation_bar"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="20dp"
            android:background="@drawable/shape_scan_order"
            android:text="@string/scan_succ_second"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btn_scan_succ_ok"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/navigation_bar"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/shape_scan_order"
            android:text="@string/scan_succ_third"
            android:textColor="@color/white" />
    </LinearLayout>

</LinearLayout>