<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <!-- 绑定完成 -->

    <include layout="@layout/myhomebank_title" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="18dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/myhome_addbank_prompt" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/myhome_addbank_byname" />

        <EditText
            android:id="@+id/et_addfinish_byname"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:background="@drawable/sel_edt_input" />
    </LinearLayout>

    <LinearLayout
        style="@style/LyContent"
        android:layout_marginTop="20dp"
        android:gravity="center" >

        <Button
            android:id="@+id/btn_addfinish_finish"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:background="@android:color/holo_blue_light"
            android:text="@string/myhome_addbank_finish" />
    </LinearLayout>

</LinearLayout>